--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,9 +49,11 @@
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait"/>
 
-        <service
-            android:name=".NotificationService"
-            android:exported="false"></service>
+        <service android:name=".FirebaseNotificationService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
